name:                powerqueue-levelmem
version:             0.1.0.0
synopsis:            A high performance in memory and LevelDB backend for powerqueue
description:         A high performance in memory and LevelDB backend for powerqueue
homepage:            https://github.com/agrafix/powerqueue#readme
license:             BSD3
license-file:        LICENSE
author:              Alexander Thiemann
maintainer:          mail@athiemann.net
copyright:           2017 Alexander Thiemann <mail@athiemann.net>
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.PowerQueue.Backend.LevelMem
  build-depends:
                base >= 4.7 && < 5
              , powerqueue >= 0.1
              , stm >= 2.4
              , stm-containers >= 0.2
              , unagi-chan >= 0.4
              , focus >= 0.1
  default-language:    Haskell2010

test-suite powerqueue-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:
                base
              , powerqueue-levelmem
              , powerqueue
              , hspec >= 2.2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/agrafix/powerqueue
